--- a/estilos.css
+++ b/estilos.css
@@ -15,6 +15,9 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-size: 100vh;
+    min-height: 100vh;
+    justify-content: space-between;
 }
 
 a {
