--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 /* CSS Document */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&family=Poppins:wght@100;400&display=swap');
 
 /*-----------GENERALES-------------------------*/
 
@@ -114,11 +114,33 @@ article {
     gap: 30px;
 }
 
-/*-----------MAIN NTOS------------------------------*/
+/*-----------MAIN NOSOTROS---------------------------*/
 
 .about {
     align-items: center;
     text-align: center;
     gap: 25px;
     max-width: 450px;
+}
+
+/*-----------MAIN CONTACTO---------------------------*/
+#contacto {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    font-size: 1.5em;
+    font-weight: 700;
+}
+
+#contacto li {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+h4 {
+    font-weight: 400;
+    font-style: italic;
+    font-size: 2em;
+    letter-spacing: 3px;
 }
