--- a/estilos.css
+++ b/estilos.css
@@ -75,6 +75,7 @@ header {
     max-width: 1200px;
     justify-content: space-between;
     margin: 0 20px;
+    position: absolute;
 }
 
 nav {
@@ -125,6 +126,7 @@ section {
     width: 100%;
     max-width: 600px;
     gap: 30px;
+    margin-left: 220px;
 }
 
 #atid-activo {
