--- a/estilos.css
+++ b/estilos.css
@@ -74,7 +74,8 @@ header {
     width: 100%;
     max-width: 1200px;
     justify-content: space-between;
-    margin: 0 20px;
+    padding: 0 20px;
+    box-sizing: border-box;
     position: absolute;
 }
 
@@ -88,6 +89,10 @@ nav a {
     font-size: 1.4em;
     font-weight: 700;
     color: black;
+}
+
+#logo-mobile {
+    display: none;
 }
 
 /*-----------FOOTER----------------------------*/
@@ -184,6 +189,7 @@ section {
     flex-direction: column;
     font-size: 1.5em;
     font-weight: 700;
+    gap: 20px;
 }
 
 #contacto li {
@@ -218,16 +224,38 @@ h4 {
         flex-direction: column-reverse;
     }
 
-    #contacto {
-        gap: 20px;
-    }
-
     #atid-activo #galeria-miniaturas {
         width: 90%;
     }
 
     #galeria-miniaturas img {
         width: 48%;
+    }
+    header {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #header-contain {
+        justify-content: center;
+        position: relative;
+    }
+
+    #logo-desktop {
+        display: none;
+    }
+
+    #logo-mobile {
+        display: block;
+        margin-top: 20px;
+    }
+
+    #bienvenida {
+        margin-left: 0;
+    }
+
+    main {
+        margin-top: 10px;
     }
 
 }
@@ -255,14 +283,6 @@ h4 {
         line-height: 48px;
         font-weight: 900;
         margin-bottom: 30px;
-    }
-
-    #header-contain {
-        justify-content: center;
-    }
-
-    #header-contain img {
-        display: none;
     }
 
 }
